--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -2,7 +2,7 @@
 
         <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
 
-        <NavLink class="nav-link" href="wildliferecordings1">Wild Life Recordings</NavLink>
+        <NavLink class="nav-link" href="wildliferecordings">Wild Life Recordings</NavLink>
 
 </nav>
 
