--- a/Components/Pages/WildLifeRecordings.razor
+++ b/Components/Pages/WildLifeRecordings.razor
@@ -1,15 +1,19 @@
 ﻿@using XenoCanto.Models;
+@using Microsoft.AspNetCore.Components.QuickGrid
+@using xeno_canto.Components.Elements
 @page "/wildliferecordings"
 @attribute [StreamRendering]
+@rendermode InteractiveServer
 @inject IConfiguration Config
 @inject HttpClient http
 @inject XenoCanto.XenoCantoHttpClient xenoCantoHttpClient
 
 <PageTitle>Wild Life Recordings In Surrey England</PageTitle>
 
-<h2>Wild Life Recordings In Surrey England</h2>
+<h2>@NameFilter Wild Life Recordings In Surrey England</h2>
 
-@if (data == null )
+
+@if (recordingsQueryable == null)
 {
     @if (errorString is not null)
     {
@@ -17,69 +21,113 @@
     }
     else
     {
-    <p><em>Loading...</em></p>
+        <p><em>Loading...</em></p>
     }
 }
 else
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Type</th>
-                <th>Name</th>
-                <th>Recordist</th>
-                <th>Remarks</th>
-                <th>Recordings</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in data.Recordings??[])
-            {
-         
-                <tr>
-                    <td>@item.date</td>
-                    <td>@item.grp</td>
-                    <td>@item.en (@item.sp @item.gen)</td>
-                     <td>@item.rec</td>
-                    <td>@item.rmk</td>
-                    <td>
-                        <audio controls="controls">
-                            <source type="audio/mpeg" 
-                                    src="@item.file">
-                            Your browser does not support the audio element.
-                        </audio>
 
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+
+   <fieldset>
+        <legend>Filter Name</legend>
+    <input type="text" @bind="NameFilter" placeholder="Filter by Name..." @bind:event="oninput" @bind:after="filters" />
+   </fieldset>
+    <fieldset>
+        <legend>Filter Type</legend>
+        <InputRadioGroup @bind-Value="ModeFilter">
+            <label>
+                <InputRadio Value="FilterModes.All" />
+                All
+            </label>
+            <label>
+                <InputRadio Value="FilterModes.Animals" />
+                Animals
+            </label>
+            <label>
+                <InputRadio Value="FilterModes.Birds" />
+                Birds
+            </label>
+        </InputRadioGroup>
+    </fieldset>
+ 
+    <QuickGrid Items="@recordingsQueryable">
+        <PropertyColumn Property="@(r => r.uploaded)" Title="Date" Format="dd-MM-yyyy" Sortable="true" />
+        <PropertyColumn Property="@(r => r.grp)" Title="Type" Sortable="true" />
+        <PropertyColumn Property="@(r => r.en)" Title="Name" Sortable="true" />
+        <PropertyColumn Property="@(r => r.rec)" Title="Recordist" Sortable="true" />
+        <PropertyColumn Property="@(r => r.rmk)" Title="Remarks" />
+        <TemplateColumn Context="r" Title="Recording">
+           <AudioComponent Src="@r.file" />
+        </TemplateColumn>
+    </QuickGrid>
+
 }
 
 @code {
     private Data? data;
-
-    private string url = "";
+    private IQueryable<Recording>? recordingsQueryable;
     private string? errorString = null;
+    private string NameFilter { get; set; } = "";
+
+    private enum FilterModes
+    {
+        All,
+        Animals,
+        Birds
+    }
+    private FilterModes _modeFilter = FilterModes.All;
+
+    private FilterModes ModeFilter
+    {
+        get { return _modeFilter; }
+        set
+        {
+            _modeFilter = value;
+
+            filters();
+        }
+    }
+
+
     protected override async Task OnInitializedAsync()
     {
         try
         {
-            data = await xenoCantoHttpClient.GetAsync();  
+            data = await xenoCantoHttpClient.GetAsync();
+            recordingsQueryable = data.Recordings?.AsQueryable();
+
         }
-        catch(Exception ex)
+        catch (Exception ex)
         {
             errorString = ex.Message;
         }
-
     }
 
-    private class WeatherForecast
+    private void filters()
     {
-        public DateOnly Date { get; set; }
-        public int TemperatureC { get; set; }
-        public string? Summary { get; set; }
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        if (recordingsQueryable != null)
+        {
+            if (string.IsNullOrWhiteSpace(NameFilter) || ModeFilter == FilterModes.All)
+            {
+                recordingsQueryable = data?.Recordings?.AsQueryable();
+            }
+
+            if (ModeFilter != FilterModes.All)
+            {
+                recordingsQueryable = recordingsQueryable?
+                .Where(item => item.grp == (ModeFilter == FilterModes.Animals ? "land mammals" : "birds"));
+            }
+
+            if (!string.IsNullOrWhiteSpace(NameFilter))
+            {
+                recordingsQueryable = recordingsQueryable?
+                .Where(
+                    item => item.en.Contains(NameFilter, StringComparison.OrdinalIgnoreCase)
+                );
+            }
+
+        }
+
     }
+
 }
