Added Filter Class

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using xeno_canto
 @using xeno_canto.Components
+@using XenoCanto.Models;
+@using Microsoft.AspNetCore.Components.QuickGrid
+@using xeno_canto.Components.Elements
