--- a/Components/App.razor
+++ b/Components/App.razor
@@ -7,9 +7,9 @@
     <base href="/" />
     <base href="~/" />
     <link rel="stylesheet" href="_content/Microsoft.AspNetCore.Components.QuickGrid/Microsoft.AspNetCore.Components.QuickGrid.bundle.scp.css" asp-append-version="true" />
-  @*   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"> *@
+  @*   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"> 
      
-    <link rel="stylesheet" href="xenocantobirdlog.styles.css" />
+    <link rel="stylesheet" href="xenocantobirdlog.styles.css" />*@
     <link rel="stylesheet" href="@Assets["StyleSheet.css"]" />
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
