--- a/Components/Pages/WildLifeRecordings.razor
+++ b/Components/Pages/WildLifeRecordings.razor
@@ -1,23 +1,43 @@
-﻿@using XenoCanto.Models;
-@using Microsoft.AspNetCore.Components.QuickGrid
-@using xeno_canto.Components.Elements
-@page "/wildliferecordings"
-@attribute [StreamRendering]
+﻿@page "/wildliferecordings"
+@using XenoCanto
+
 @rendermode InteractiveServer
-@inject IConfiguration Config
-@inject HttpClient http
 @inject XenoCanto.XenoCantoHttpClient xenoCantoHttpClient
+
+@code {
+
+    private XenoCanto.XenoCantoFilter FilterHelper = new XenoCanto.XenoCantoFilter();
+
+    protected override async Task OnInitializedAsync()
+    {
+      
+        try
+        {
+            FilterHelper.InitialData = await xenoCantoHttpClient.GetAsync();
+        }
+        catch (Exception ex)
+        {
+            FilterHelper.errorString = ex.Message;
+        }
+    }
+
+
+
+}
+
+
+
 
 <PageTitle>Wild Life Recordings In Surrey England</PageTitle>
 
-<h2>@NameFilter Wild Life Recordings In Surrey England</h2>
+<h2>Wild Life Recordings In Surrey England</h2>
 
 
-@if (recordingsQueryable == null)
+@if (FilterHelper.InitialData == null)
 {
-    @if (errorString is not null)
+    @if (FilterHelper.errorString is not null)
     {
-        <p><em>@errorString</em></p>
+        <p><em>@FilterHelper.errorString</em></p>
     }
     else
     {
@@ -28,13 +48,13 @@ else
 {
 
 
-   <fieldset>
+    <fieldset>
         <legend>Filter Name</legend>
-    <input type="text" @bind="NameFilter" placeholder="Filter by Name..." @bind:event="oninput" @bind:after="filters" />
-   </fieldset>
+        <input type="text" @bind="FilterHelper.NameFilter" placeholder="Filter by Name..." @bind:event="oninput" />
+    </fieldset>
     <fieldset>
         <legend>Filter Type</legend>
-        <InputRadioGroup @bind-Value="ModeFilter">
+        <InputRadioGroup @bind-Value="FilterHelper.ModeFilter">
             <label>
                 <InputRadio Value="FilterModes.All" />
                 All
@@ -49,85 +69,17 @@ else
             </label>
         </InputRadioGroup>
     </fieldset>
- 
-    <QuickGrid Items="@recordingsQueryable">
+
+    <QuickGrid Items="@FilterHelper.Recordings">
         <PropertyColumn Property="@(r => r.uploaded)" Title="Date" Format="dd-MM-yyyy" Sortable="true" />
         <PropertyColumn Property="@(r => r.grp)" Title="Type" Sortable="true" />
         <PropertyColumn Property="@(r => r.en)" Title="Name" Sortable="true" />
         <PropertyColumn Property="@(r => r.rec)" Title="Recordist" Sortable="true" />
         <PropertyColumn Property="@(r => r.rmk)" Title="Remarks" />
         <TemplateColumn Context="r" Title="Recording">
-           <AudioComponent Src="@r.file" />
+            <AudioComponent Src="@r.file" />
         </TemplateColumn>
     </QuickGrid>
 
 }
 
-@code {
-    private Data? data;
-    private IQueryable<Recording>? recordingsQueryable;
-    private string? errorString = null;
-    private string NameFilter { get; set; } = "";
-
-    private enum FilterModes
-    {
-        All,
-        Animals,
-        Birds
-    }
-    private FilterModes _modeFilter = FilterModes.All;
-
-    private FilterModes ModeFilter
-    {
-        get { return _modeFilter; }
-        set
-        {
-            _modeFilter = value;
-
-            filters();
-        }
-    }
-
-
-    protected override async Task OnInitializedAsync()
-    {
-        try
-        {
-            data = await xenoCantoHttpClient.GetAsync();
-            recordingsQueryable = data.Recordings?.AsQueryable();
-
-        }
-        catch (Exception ex)
-        {
-            errorString = ex.Message;
-        }
-    }
-
-    private void filters()
-    {
-        if (recordingsQueryable != null)
-        {
-            if (string.IsNullOrWhiteSpace(NameFilter) || ModeFilter == FilterModes.All)
-            {
-                recordingsQueryable = data?.Recordings?.AsQueryable();
-            }
-
-            if (ModeFilter != FilterModes.All)
-            {
-                recordingsQueryable = recordingsQueryable?
-                .Where(item => item.grp == (ModeFilter == FilterModes.Animals ? "land mammals" : "birds"));
-            }
-
-            if (!string.IsNullOrWhiteSpace(NameFilter))
-            {
-                recordingsQueryable = recordingsQueryable?
-                .Where(
-                    item => item.en.Contains(NameFilter, StringComparison.OrdinalIgnoreCase)
-                );
-            }
-
-        }
-
-    }
-
-}
